--- a/src/skjema/bilforsikring.scss
+++ b/src/skjema/bilforsikring.scss
@@ -1,36 +1,52 @@
+// Variables
+$rem: 1rem;
+$btn-padding: $rem $rem * 1.4;
+$btn-border-radius: 2rem;
+
+// Mixins
+@mixin input-fields {
+  border-radius: 0.2rem;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  height: 3rem;
+  margin-top: 1rem;
+  min-width: 100%;
+  padding: 0.4rem;
+}
+
+@mixin button-styles {
+  border-radius: $btn-border-radius;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-right: 1rem;
+  padding: $btn-padding;
+}
+
+// Styling
 .bilforsikring-skjema {
   display: grid;
-  grid-template-rows: repeat(1, 1fr);
-  grid-template-columns: repeat(1, 1fr);
   gap: 8px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   width: 100%;
 
-  .bilforsikring-skjema--item {
-    margin-top: 2rem;
+  &--item {
     font-size: 1.6rem;
     font-weight: normal;
+    margin-top: 2rem;
   }
 }
 
 input, select {
-  box-sizing: border-box;
-  min-width: 100%;
-  height: 3rem;
-  font-size: 1.2rem;
-  margin-top: 1rem;
-  border: 1px solid black;
-  border-radius: 0.2rem;
-  padding: 0.4rem;
+  @include input-fields;
 }
 
 .btn {
-  border-radius: 2rem;
-  padding: 1rem 1.4rem;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-right: 1rem;
-  cursor: pointer;
+  @include button-styles;
 }
+
 .btn-beregn {
   background: black;
   color: white;
@@ -41,18 +57,29 @@ input, select {
   color: black;
 }
 
+.bilforsikring-skjema--pris {
+  align-items: start;
+  background-color: #d3d3f6;
+  border-radius: .4rem;
+  box-sizing: border-box;
+  color: #1b1917;
+  margin-top: 1rem;
+  padding: 1rem;
+  width: 100%;
+
+  &--prisbelop {
+    padding-left: 1rem;
+  }
+}
+
 @media (min-width: 960px) {
   .bilforsikring-skjema {
-    display: grid;
-    grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 8px;
-    width: 100%;
   }
 
   .navn-wrapper {
-    flex-direction: row;
     display: flex;
+    flex-direction: row;
     gap: 2rem;
   }
 }
