--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,11 @@ $font-size-base: 1.4rem;
 body {
   font-family: $font-primary;
   font-size: $font-size-base;
-  margin: 0;
+  margin: 0 auto;
   padding: 1rem;
+  display: flex; /* Use flexbox */
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
 }
 
 main {
@@ -36,7 +39,23 @@ h1 {
   font-size: 1.2rem;
   margin-top: 0.2rem;
   padding-top: 0.6rem;
+  opacity: 0;
+  animation: fadeIn ease-in 0.4s forwards;
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  &.show {
+    opacity: 1;
+  }
 }
+
 
 @media (min-width: 960px) {
   body {
