--- a/src/skjema/bilforsikring.scss
+++ b/src/skjema/bilforsikring.scss
@@ -22,6 +22,10 @@ $btn-border-radius: 2rem;
   font-weight: 600;
   margin-right: 1rem;
   padding: $btn-padding;
+  transform-origin: 50% 90%;
+  transition-duration: .15s;
+  transition-property: transform, background-color;
+  transition-timing-function: ease;
 }
 
 // Styling
@@ -50,11 +54,19 @@ input, select {
 .btn-beregn {
   background: black;
   color: white;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 .btn-avbryt {
   background: white;
   color: black;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 .bilforsikring-skjema--pris {
@@ -63,23 +75,30 @@ input, select {
   border-radius: .4rem;
   box-sizing: border-box;
   color: #1b1917;
-  margin-top: 1rem;
+  margin-top: 2rem;
   padding: 1rem;
   width: 100%;
 
   &--prisbelop {
     padding-left: 1rem;
   }
+
+  &-ikon {
+    padding-right: 1rem;
+  }
 }
 
 @media (min-width: 960px) {
-  .bilforsikring-skjema {
-    grid-template-columns: repeat(2, 1fr);
+  .bilforsikring-skjema--item {
+    max-width: 36%;
+  }
+
+  .bilforsikring-skjema--pris {
+    max-width: 75%;
   }
 
   .navn-wrapper {
     display: flex;
-    flex-direction: row;
     gap: 2rem;
   }
 }
